# forge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_VS_ENTERPRISE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.dockerignore  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  ci.sh  demo_ingest.py  docker-compose.ha.yml  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  scope.example.json
.github/: dependabot.yml  secret_scanning.yml
.github/workflows/: ci.yml
console/: .gitignore  Cargo.toml
console/.cargo/: audit.toml
console/src/: auth.rs  backup.rs  backup_crypto.rs  backup_sched.rs  blob.rs  boot.rs  cli.rs  common.rs  compliance.rs  compliance_evidence.rs  compliance_policy.rs  dbmigrate.rs  detection.rs  engagements.rs  error.rs  exec.rs  finding_templates.rs  findings.rs  findings_bulk.rs  findings_report.rs  flags.rs  ha.rs  ingest.rs  ledger_api.rs  main.rs  net.rs  notifications.rs  planning.rs  presence.rs  query.rs  rbac.rs  redact.rs  report_render.rs  reports.rs  router.rs  runs.rs  runs_ha.rs  runs_proc.rs  runs_validate.rs  saved_views.rs  (+23 more)
console/src/cli/: ledger.rs  migrate_store.rs  mod.rs  read.rs  seed.rs  status.rs  upgrade.rs  user.rs
console/web/: app.js  index.html  manifest.webmanifest  style.css  sw.js
console/web/js/components/: detection-source-form.js
console/web/js/core/: api.js  auth.js  dom.js  help.js  notifications.js  presence.js  router.js  state.js  ui.js
console/web/js/views/: admin.js  attack-matrix.js  campaigns.js  compliance.js  coverage.js  dashboards.js  engagements.js  explore.js  findings-library.js  findings.js  identity.js  import.js  launch.js  ledger.js  modules.js  overview.js  reports.js  roe.js  techniques.js  tenancy.js  workflows.js
console/web/js/views/admin/: addtool.js  backup.js  connectors.js  console.js  detection.js  network.js  users.js
console/web/js/views/launch/: index.js  live.js  modules-form.js  reports.js  resource.js  run-result.js  runs-list.js  scope-plan.js  submit.js
deploy/: forge-console.service  forge.service
docs/: ADMINISTRATION.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR_PLAN.md  AUDIT.md  BACKUP.md  CLI.md  CONCEPTS.md  CONFIGURATION.md  CONSOLE.md  DEPLOYMENT.md  DETECTION.md  FIRST_DEPLOYMENT.md  GETTING_STARTED.md  HOLISTIC_AUDIT.md  HTTP_API.md  INSTALLATION.md  KEY_CUSTODY.md  MIGRATION.md  MODULES.md  MTTD.md  OVERVIEW.md  PLAN.md  PLATFORMS.md  POSITIONING.md  PRICING.md  PURPLE_CAMPAIGN.md  PURPLE_PREREQS.md  QUICKSTART.md  READINESS_MATRIX.md  README.md  REFERENCE_ENGAGEMENT_TEMPLATE.md  SECRETS.md  SECURITY_AUDIT.md  SECURITY_MODEL.md  STANDALONE.md  TECHNIQUE_COVERAGE.md  TOOLS.md  TROUBLESHOOTING.md  UNINSTALL.md  UPGRADE.md  (+1 more)
examples/reference-engagement/: README.md  REFERENCE_ENGAGEMENT.md  detections.jsonl  findings.jsonl  roe_decisions.jsonl  runrecords.jsonl  scope.json  targets.json
forge/: __init__.py  anchor.py  brain.py  browser_client.py  challenge.py  cli.py  compliance_signer.py  console_client.py  detections.py  engine.py  graph.py  ledger.py  llm.py  memory.py  memory_faiss.py  pin.py  planner.py  portability.py  purple.py  redact.py  report.py  report_engagement.py  resource_profile.py  roe.py  runner.py  schema.py  session.py  signing.py  signing_pkcs11.py  techniques.py  techniques_data.py  throttle.py  triage.py  workflows.py
forge/cli/: __init__.py  __main__.py  catalog.py  engine.py  ledger.py  purple.py
forge/collectors/: __init__.py  base.py  crowdsec.py  elastic.py  exec_cmd.py  file_jsonl.py  generic_http.py  syslog.py
forge/importers/: __init__.py  _base.py  parsers.py
forge/modules/: __init__.py  _daemon_reap.py  _discovery.py  _msgpack.py  _scopeguard.py  access_control.py  auth.py  burp.py  business_logic.py  clientflow.py  cors.py  demo.py  evasion.py  exposure.py  httpflow.py  injection.py  injection_probes.py  loader.py  msf.py  oauth.py  oracle.py  origin.py  pentest.py  race.py  rce.py  recon.py  recon_active.py  recon_surface.py  registry.py  rfi.py  security_headers.py  ssrf.py  takeover.py  tokenapi.py  toolcatalog.py  toolspec.py  web.py  xxe.py
forge/modules/contrib/: README.md  example.toolspec.json  example_plugin.py  hard.toolspec.json  medium.toolspec.json  simple.toolspec.json
k8s/: 00-namespace.yaml  10-secrets.example.yaml  11-config.yaml  20-postgres.yaml  30-minio.yaml  40-console.yaml  50-ingress.yaml  60-networkpolicies.yaml  kustomization.yaml
plugins/: .gitkeep
scripts/: check_version.py
tests/: __init__.py  test_all_tools_schema_args.py  test_anchor.py  test_ato_auth_context.py  test_ato_signals_r7.py  test_auth_context.py  test_authrace_oracles.py  test_browser_discover.py  test_cancel_reaps_tools.py  test_catalog.py  test_chaining.py  test_challenge_discovery_bridge.py  test_cli_modules.py  test_cli_param_probes.py  test_cli_purple_pubkey.py  test_clientflow_oracles.py  test_collectors.py  test_compliance.py  test_connector_governance.py  test_connectors.py  test_contrib_graded_toolspecs.py  test_detections.py  test_engagement_isolation.py  test_engine_durability.py  test_engine_iterative.py  test_engine_parallel.py  test_finding_redaction_and_soundness.py  test_g1_injectable_endpoint_chain.py  test_importers.py  test_injection_oracles.py  test_injection_protocol_oracles.py  test_ledger.py  test_ledger_key_protection.py  test_ledger_signer.py  test_llm_assist.py  test_llm_egress_private_gate.py  test_llm_payload_enrich_r6.py  test_memory_sem.py  test_mitre.py  test_mock_plume.py  (+38 more)
tests/_snapshots/: default_fixes.json  mitre_by_kind.json  oracle_findings.json  planner_const.json
tools/: .gitkeep  mock_plume.py
toolspecs/: .gitkeep
