[package]
name = "forge-console"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "Forge console — store findings/run-records + API + le point de jonction de la boucle purple (ingest ATT&CK). Fork de la colonne Plume."

[[bin]]
name = "forge-console"
path = "src/main.rs"

[features]
# `encryption` (SQLCipher au repos) — OPT-IN, OFF PAR DÉFAUT. Activée, elle bascule rusqlite sur
# `bundled-sqlcipher` (amalgame SQLCipher compilé — exige un backend crypto système/openssl à la
# compilation). Le build PAR DÉFAUT (sans cette feature) ne pull PAS SQLCipher : `cfg!(feature=
# "encryption")` se lit `false`, tout le code PRAGMA-key/sqlcipher_export est gardé `#[cfg(feature=
# "encryption")]`, et la suite reste verte sans sqlcipher/openssl. N'activer que pour un déploiement
# chiffré au repos (`cargo build --features encryption`).
encryption = ["rusqlite/bundled-sqlcipher"]

# Wave-1 lints: only lints that are GREEN under `-D warnings` today are locked in (so CI can enforce
# them without churn). `await_holding_lock` guards the deferred CONC-1 work (never hold a std Mutex
# across `.await`). The other candidates were dropped this wave because they flag pre-existing,
# out-of-scope issues that cannot be fixed without broad/risky churn: `string_slice` (29 hits — string
# indexing is pervasive), `redundant_clone` (17 hits, nursery lint w/ false positives), and
# `unreachable_pub` (24 hits — would narrow the enterprise modules' deliberately-`pub` separable API).
[lints.clippy]
await_holding_lock = "warn"

[dependencies]
guatx-core = { path = "../../core" }   # cœur partagé public (GUATX/core) ; passer à une dép git quand le repo public existe
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }   # ServeDir : assets web statiques (style.css/app.js/fonts/…) — fallback du SPA
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "process", "time", "sync", "io-util"] }
libc = "0.2"   # setsid (process group) + killpg pour cancel/watchdog du spawn campaign
futures-util = { version = "0.3", default-features = false }   # stream::unfold -> SSE sans tokio-stream
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
sha2 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
getrandom = "0.2"   # CSPRNG OS (token bearer + sel argon2id) — Result vérifié, jamais d'entropie tous-zeros
subtle = "2"        # comparaison à temps constant du bearer/token (anti timing-oracle)
chacha20poly1305 = "0.10"   # AEAD PUR RUST (RustCrypto : chacha20 + poly1305, zéro dép C/openssl) — chiffre l'archive backup (XChaCha20-Poly1305, nonce 24o, tag auth). Build par défaut safe.
tar = "0.4"                 # archive backup au format tar standard (pur Rust) : snapshot DB + ledger JSONL + clé .ed25519 + manifest.json
# ENTERPRISE SSO (OIDC) — validation cryptographique de l'ID token (signature JWKS RS256, iss/aud/exp).
# `default-features=false` : on retire la feature `use_pem` (parsing PEM via `pem`+`simple_asn1`) INUTILE
# au runtime SSO (on valide via composantes RSA n/e du JWKS, pas via PEM). Le crate reste sur `ring`
# (crypto RustCrypto/asm — AUCUN openssl) => le build PAR DÉFAUT reste openssl-free. Le module sso est
# compilé mais INERTE tant que le flag runtime FORGE_ENTERPRISE_SSO / enterprise.sso est OFF (community).
jsonwebtoken = { version = "9", default-features = false }

[dev-dependencies]
# Tests SSO uniquement : `use_pem` (from_rsa_pem) sert à SIGNER l'ID token du mock IdP en RS256. Reste
# sur `ring` (pas d'openssl). N'affecte PAS le build/binaire par défaut (dev-dependency).
jsonwebtoken = { version = "9" }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
